--- a/smuzi/css/style.css
+++ b/smuzi/css/style.css
@@ -42,17 +42,18 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     height: 100vh;
     background-size: cover;
     background-position: center;
+    
 }
 
 .header__top {
-
+    
     
     
     
 } 
 
 .header__conteiner {
-    display: flex;
+    
 }
 .menu{
     
@@ -64,7 +65,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     text-transform: uppercase;
     letter-spacing: 0.02em;
     color: white;
-    display: flex; 
+    
 }
 .menu__list-item{
     color: white;
@@ -74,9 +75,15 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 .header_logo{
     
 }
-.logo{}
-.logo__link{}
-.logo__img{}
+.logo{
+    
+}
+.logo__link{
+    
+}
+.logo__img{
+    
+}
 
 .header__personal{} 
 .personal{}
@@ -106,6 +113,54 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 .btn{}
 .header__btn--green{}
-.header__title{} 
+.header__title{
+    font-size: 45px;
+    line-height: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.02em;
+    color: white;
+} 
 .title{}
-                   
+
+
+.smoothies{
+    padding-top: 98px;
+}
+
+.smoothies__title {
+    font-family: Muli;
+    font-size: 50px;
+    line-height: 40px;
+    font-weight: 800;
+    letter-spacing: -0.02em;
+    color: #f7ae3b;
+    text-align: center;
+    padding-bottom: 55px;
+}
+
+.smoothies__text{
+    font-family: Muli;
+    font-size: 18px;
+    line-height: 35px;
+    font-weight: 400;
+    color: #1e1e1e;
+    text-align: center;
+}
+
+.smoothies__content{
+    
+}
+
+.smoothies__cards{
+    
+}
+
+
+.about__img{
+    
+}
+
+.about__title{
+
+}
