--- a/smuzi/css/style.css
+++ b/smuzi/css/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     border: 0;
+    border: 1px solid red;
 }
 
 *,*:before,*:after{
@@ -39,22 +40,23 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 .header{
     background-image: url(..//img/header_bg_img.png);
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-size: cover;
     background-position: center;
+    display: flex;
+    flex-direction: column;
     
 }
 
 .header__top {
-    
-    
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 70px 100px 100px;
+    width: 100%;   
     
 } 
 
-.header__conteiner {
-    
-}
 .menu{
     
 }
@@ -65,10 +67,12 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     text-transform: uppercase;
     letter-spacing: 0.02em;
     color: white;
+    display: flex;
     
 }
 .menu__list-item{
     color: white;
+    padding: 5px 10px;
 }
 .menu__link{}
 
@@ -85,19 +89,39 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     
 }
 
+.header__right-menu{
+    width: 420px;
+    display: flex;
+    justify-content: space-between;
+}
+
 .header__personal{} 
 .personal{}
-.personal__list{}
-.personal__list-item{}
+.personal__list{
+    display: flex;
+}
+.personal__list-item{
+    padding: 5px 10px;
+}
 .personal__link{}
 .personal__img{}
 
 .header__social{} 
 .social{}
-.social__list{}
-.social__list-item{}
+.social__list{
+    display: flex;
+}
+.social__list-item{
+    padding: 5px 10px;
+}
 .social__link{}
 .social__img{}
+
+.header__content{
+    text-align: center;
+    padding-top: 109px;
+}
+
 
 .header__btn{
     width: 280px;
@@ -111,6 +135,11 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     letter-spacing: -0.02em;
     color: #ffffff;
 }
+
+.header__btn::after{
+    color:blue;
+}
+
 .btn{}
 .header__btn--green{}
 .header__title{
@@ -228,6 +257,8 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 
 .products{
     display: flex;
+    align-items: stretch;
+
     
 }
 
@@ -380,4 +411,72 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     width: 220px;
     height: 218px;
     padding-top: 115px;
+}
+
+.blog{
+    display: flex;
+}
+
+.blog__box{
+    padding-top: 99px;
+    padding-left: 360px;
+}
+
+.blog__title{
+    font-family: Muli;
+    font-size: 50px;
+    line-height: 40px;
+    font-weight: 800;
+    letter-spacing: -0.02em;
+    color: #f7ae3b;
+    padding-bottom: 49px;
+}
+
+.blog__wrap{
+    padding-left: 61px;
+    padding-top: 320px;
+    
+}
+
+.blog__subtitle{
+    font-family: Muli;
+    font-size: 30px;
+    line-height: 40px;
+    font-weight: 800;
+    letter-spacing: -0.02em;
+    color: #f2612d;
+    
+}
+
+.blog__data{
+    font-family: Muli;
+    font-size: 10px;
+    line-height: 35px;
+    font-weight: 400;
+    color: #1e1e1e;
+}
+
+.blog__excerpt{
+    font-family: Muli;
+    font-size: 18px;
+    line-height: 35px;
+    font-weight: 400;
+    color: #1e1e1e;
+    padding-left: 60px;
+}
+
+.blog__link{
+    font-weight: 800;
+    font-style: italic;
+}
+
+.instagram__title{
+    font-family: Muli;
+    font-size: 24px;
+    line-height: 40px;
+    font-weight: 800;
+    letter-spacing: -0.02em;
+    color: #0aa566;   
+    text-align: center;
+    padding-top: 150px;
 }
