--- a/smuzi/css/style.css
+++ b/smuzi/css/style.css
@@ -1,7 +1,6 @@
 * {
     padding: 0;
     margin: 0;
-    border: 1px solid red;
     font-family: 'Muli';
     
 }
@@ -194,7 +193,8 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     font-weight: 400;
     color: #1e1e1e;
     text-align: center;
-    padding: 55px 502px 88px 502px;
+    max-width: 943px;
+    margin-top: 55px;
    
 }
 
@@ -202,6 +202,18 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     display: flex;
     justify-content: center;
     padding-top: 61px;
+    flex-wrap: wrap;
+    max-width: 1000px;
+}
+
+.smoothies__cards {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex: 1;
+    flex-basis: 25%;
 }
 
 .smoothies__caption{
@@ -215,11 +227,11 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 .about{
     background-color: #16816f;
     display: flex;
-    margin-top: 107px;
+    
 }
 
 .about__box {
-    padding-left: 143px;
+   
 }
 
 
@@ -229,8 +241,9 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 
 .about__content{
-    padding-top: 97px;
-    margin-left: 179px;
+   margin-top: 97px;
+   margin-bottom: 93px;
+   margin-left: 179px;
 }
 
 .about__title{
@@ -248,8 +261,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 
 .about__list{
-    padding-top: 47px;
-    padding-bottom: 48px;
+   
     
 }
 
@@ -274,6 +286,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     line-height: 22px;
     font-weight: 800;
     color: #ffffff;
+    
       
      
 }
@@ -301,6 +314,8 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     line-height: 22px;
     font-weight: 700;
     color: #ffffff;
+    padding-top: 34px;
+    text-align: center;
 }
 
 .products__span{
@@ -322,6 +337,12 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     font-weight: 800;
     color: #ffffff;
     background-color: #652a18;
+    display: block;
+    align-items: center;
+}
+
+.products__span{
+    display: block;
 }
 
 .products__card-vegan{
@@ -380,12 +401,16 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     background-color: #0aa566;
     border-radius: 30px;
     font-family: Muli;
-    font-size: 21px;
+    font-size: 20px;
     line-height: 22px;
     font-weight: 800;
     color: #ffffff;
     margin-top: 58px;
-    
+    padding: 20px 148px 20px 32px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
 }
 
 .story__content{
@@ -558,7 +583,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 .footer__img{
     padding-top: 120px;
-    padding-left: 30px;
+    padding-left: 102px;
 }
 
 .information__title{
@@ -597,14 +622,50 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 
 .payment__list{
+    
     display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    flex: 1;
+    flex-basis: 25%;
     padding-top: 35px;
 }
 
 .payment__item{
-
+    
 }
 
+.footer__subscribe{
+    padding-top: 79px;
+}
+
+.subscribe__subtitle{
+    font-family: Muli;
+    font-size: 26px;
+    line-height: 40px;
+    font-weight: 800;
+    letter-spacing: -0.02em;
+    color: #ffffff;
+}
+
+.subscribe__form{
+    padding-top: 33px;
+}
+
+.subscribe__registr{
+    width: 498px;
+    height: 63px;
+    background-color: #ffffff;
+    border-radius: 30px;
+    font-family: Muli;
+    font-size: 17px;
+    line-height: 35px;
+    font-weight: 700;
+    letter-spacing: -0.02em;
+    color: #6d450c;
+    padding: 25px 219px 25px 65px;
+}
 
 
 
@@ -618,9 +679,16 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     background-color:#6c291d;
     width: 100%;
     height: 60px;   
+    text-align: center;
 }
 
 .footer__samp{
     margin-top: 28px;
 }
 
+.footer__top{
+    width: 53px;
+    height: 53px;
+    background-color: #f2662f;
+    border-radius: 5px;
+}
